Add building register command